--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ section {
 .x-link {
   display: inline-flex;
   align-items: center;
+  padding: 0.8rem 1.5rem;
   background-color: #000000;
   color: #ffffff;
   text-decoration: none;
